___learning/phase-3/phase_3.3/application/istio-manifests/frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  #  <service-name>.<namespace>.svc.cluster.local
  - "frontend"
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
